--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
-    "styled-components": "^6.0.8"
+    "react-scroll": "^1.9.0",
+    "styled-components": "^6.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
