--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-spring": "^9.7.3",
     "styled-components": "^6.0.9"
   },
   "devDependencies": {
